fixed aligning issue

--- a/main.scss
+++ b/main.scss
@@ -101,7 +101,7 @@ body {
 	margin-top: 2.5em;
 	display: flex;
 	flex-direction: column;
-	text-align: center;
+	align-items: center;
 
 	.left {
 
@@ -119,6 +119,7 @@ body {
 
 		padding: 1em;
 		max-width: 20em;
+		text-align: center;
 
 		p {
 
@@ -298,7 +299,7 @@ body {
 
 .news-chip {
 
-	width: 80%;
+	width: 20em;
 	overflow: hidden;
 	border-radius: 1em;
 	margin-bottom: 1em;
@@ -432,6 +433,7 @@ body {
 
 	flex-direction: row;
 	justify-content: center;
+	align-items: start;
 
 		.left {
 
